# advent_of_code_2025

./: .gitignore  README.md
day01/: Makefile  README.md  solution1.1.c  solution1.2.c  solution1.c
day02/: CMakeLists.txt  solution2.1.c
